Primer commit: añadir archivos del portafolio y corregir nombres de archivos

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <div class="hero__content">
         <h1 id="hero-title">Oscar J. Martínez Paz</h1>
         <p class="hero__tagline">Desarrollador Web Junior (QA)</p>
+        <div class="contenedor-hero__subtitle">
         <p class="hero__subtitle">
           Profesional en Tecnología y Gestión Estratégica, con experiencia en administración 
           de bases de datos, dirección tecnológica y soporte institucional. 
@@ -99,6 +100,7 @@
            reproducibles y eficientes, con actitud proactiva y orientación a 
            resultados.
         </p>
+        </div>
         <div class="seccion-divisor"></div>
 <div class="hero__contact-info">
   <!-- Contenedor para los detalles de contacto -->
@@ -141,7 +143,7 @@
       <div class="projects-grid">
         <article class="project-card">
           <header class="project-card__header">
-            <h3>TaskFlow</h3>
+            <h3>Protocolo de Trabajo</h3>
             <p class="project-card__role">
               Full Stack · SaaS de gestión de tareas
             </p>
@@ -151,7 +153,8 @@
             en tiempo real y autenticación JWT.
           </p>
           <ul class="project-card__stack">
-            <li>React</li>
+            <li>Desarrollo y Gestión de Plataforma Web</li>
+            <li>JavaScript</li>
             <li>Node.js</li>
             <li>PostgreSQL</li>
             <li>WebSockets</li>
